--- a/src/index.html
+++ b/src/index.html
@@ -23,23 +23,23 @@
         </div>
         <div class="ogonafig">
             <div class="ryad">
-                <h3><a href=”basic-html.html>Основы HTML</a></h3>
+                <h3><a href=basic-html.html>Основы HTML</a></h3>
                 <img class="photo" src="/src/images/html-logo.png" alt="hexlet">
             </div>
             <div class="ryad">
-                <h3><a href=”basic-css.html>Основы CSS</a></h3>
+                <h3><a href=basic-css.html>Основы CSS</a></h3>
                 <img class="photo" src="/src/images/css-logo.png" alt="hexlet">
             </div>
             <div class="ryad">
-                <h3><a href=”basic-js.html>Основы JS</a></h3>
+                <h3><a href=basic-js.html>Основы JS</a></h3>
                 <img class="photo" src="/src/images/js-logo.png" alt="hexlet">
             </div>
-            <div class="ryad">
-                <h3><a href=”basic-github.html>GitHub</a></h3>
+            <div class="ryad2">
+                <h3><a href=basic-github.html>GitHub</a></h3>
                 <img class="photo" src="/src/images/github-logo.png" alt="hexlet">
             </div>
-            <div class="ryad">
-                <h3><a href=”basic-linux.html>Linux</a></h3>
+            <div class="ryad2">
+                <h3><a href=basic-linux.html>Linux</a></h3>
                 <img class="photo" src="/src/images/ubuntu-logo.png" alt="hexlet">
             </div>
             <br>
