--- a/src/basic-js.html
+++ b/src/basic-js.html
@@ -7,10 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
     <div class="js">
         <h1>basic JavaScript</h1>
-        <img src="/src/images/js-logo.png" alt="jssuchka" class="js-logo">
+        <img src="/images/js-logo.png" alt="jssuchka" class="js-logo">
     </div>
+    </header>
+    <section class="main-content">
     <div class="container">
         <div class="box1">
             <div class="valuetypes0">Valuetypes</div>
@@ -145,6 +148,8 @@ and then released
             </pre>
         </div>
     </div>
+    </section>
+    <footer></footer>
     </div>
 </body>
 </html>
